@@ -7,6 +7,8 @@ Yosys 0.20 .. Yosys 0.20-dev
  * New commands and options
     - Added "formalff" pass - transforms FFs for formal verification
     - Added option "-formal" to "memory_map" pass
+    - Added option "-witness" to "rename" - give public names to all signals
+      present in yosys witness traces
 
  * Formal Verification
     - Added $anyinit cell to directly represent FFs with an unconstrained
